<resources>
    <string name="app_name">TestExercise</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="start_registration">Create New Account!</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_account">Create account</string>
    <string name="start_login">Already have account? Sign in!</string>
    <string name="skip"><![CDATA[Skip >>]]></string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_reviews">Reviews</string>
    <string name="review">Type your review…</string>
    <string name="registration_successful">Congratulation, registration was successful!</string>
    <string name="registration_failed">Sorry, registration was failed! \nUnavailable login.</string>
    <string name="sign_in_successful">Sign In was Successful!</string>
    <string name="sign_in_failed">Sign In was Failed! \nIncorrect login or password!</string>
    <string name="cancel">Cancel</string>
    <string name="btn_sign_in">Sign In</string>
    <string name="btn_log_out">Log out</string>
    <string name="hello_dear_user">Hello, Dear user!</string>
    <string name="testexercise">TestExercise</string>
    <string name="item_registration">Registration</string>
</resources>
