<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:background="@drawable/title_background"
                android:fontFamily="serif"
                android:paddingBottom="24dp"
                android:paddingTop="24dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="TestExercise"
                android:id="@+id/textView2" />

            <Button
                android:id="@+id/sign_in_navigation_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_entry"
                android:drawablePadding="18dp"
                android:fontFamily="serif"
                android:text="@string/btn_sign_in"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <Button
                android:id="@+id/log_out_navigation_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:background="@android:color/transparent"
                android:drawablePadding="18dp"
                android:drawableRight="@drawable/ic_action_exit"
                android:fontFamily="serif"
                android:text="@string/btn_log_out"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/hello_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:text="@string/hello_dear_user" />

        </android.support.constraint.ConstraintLayout>

</LinearLayout>